--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,11 +1,13 @@
-<%= form_for(@restaurant) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :address %>
-  <%= f.text_field :address %>
-  <%= f.label :phone_number %>
-  <%= f.text_field :phone_number %>
-  <%= f.label :category %>
-  <%= f.select :category, collection: Restaurant::CATEGORIES %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <%= simple_form_for [@restaurant] do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
+    <%= f.label :phone_number %>
+    <%= f.text_field :phone_number %>
+    <%= f.label :category %>
+    <%= f.select :category, collection: Restaurant::CATEGORIES %>
+    <%= f.submit %>
+  <% end %>
+</div>
